revise file location of normalize.css

--- a/homeworks/week6/hw2/index.css
+++ b/homeworks/week6/hw2/index.css
@@ -1,3 +1,5 @@
+@import url("../../../node_modules/normalize.css/normalize.css");
+
 .form__wrapper {
   box-sizing: border-box;
   max-width: 645px;
