--- a/homeworks/week6/hw2/index.css
+++ b/homeworks/week6/hw2/index.css
@@ -5,15 +5,9 @@
   max-width: 645px;
   box-shadow: 1.8px 2.4px 5px 0 rgba(0, 0, 0, 0.3);
   background-color: #ffffff;
-  margin: 0 auto 60px auto;
+  border-top: solid 8px #fad312;
+  margin: 120px auto 60px auto;
   padding: 35px 45px;
-}
-
-.top-bar {
-  margin: 120px auto 0px auto;
-  max-width: 645px;
-  height: 8px;
-  background-color: #fad312;
 }
 
 h1, h2, p {
@@ -95,20 +89,12 @@ form > div > input {
 }
 
 @media(max-width: 768px) {
-  .top-bar {
-    box-sizing: border-box;
-    margin-top: 8px;
-    box-shadow: none;
-    border: solid 1px rgba(0, 0, 0, 0.3);
-    border-bottom: none;
-  }
-
   .form__wrapper {
     align-self: center;
-    margin: 0  auto 60px auto;
+    margin: 0px auto 60px auto;
     padding: 35px 25px;
     box-shadow: none;
-    border: solid 1px  rgba(0, 0, 0, 0.3);
-    border-top: none;
+    border: solid 1px rgba(0, 0, 0, 0.3);
+    border-top: solid 8px #fad312;
   }
 }
