--- a/homeworks/week7/challenge/index.css
+++ b/homeworks/week7/challenge/index.css
@@ -14,6 +14,10 @@ body {
   align-items: flex-end;
 }
 
+.active {
+  z-index: 1;
+}
+
 h1 {
   background-color: rgba(0, 0, 0, .3);
   color: rgb(240, 240, 240);
@@ -22,7 +26,6 @@ h1 {
 .sliders__no1 {
   background: url("./imgs/High\ Sierra.jpg") center center no-repeat fixed;
   background-size: 100vw 100vh;
-  z-index: 2;
 }
 
 .sliders__no2 {
