--- a/homeworks/week7/challenge/index.css
+++ b/homeworks/week7/challenge/index.css
@@ -1,50 +1,84 @@
 body {
+  display: flex;
   margin: 0;
   padding: 0;
+  justify-content: center;
+  align-content: center;
+}
+
+.sliders {
+  display: flex;
+  flex-flow: row nowrap;
+  height: 90vh;
+  width: 90vw;
 }
 
 .sliders > div {
-  position: fixed;
   top: 0;
   left: 0;
-  min-height: 100vh;
-  min-width: 100vw;
+  height: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  color: rgb(240, 240, 240);
 }
 
-.active {
-  z-index: 1;
+.sliders.show {
+  order: 0;
+  width: 100%;
+  transition: width .4s;
+}
+
+.sliders div.hide {
+  width: 0;
+  transition: width .4s;
+}
+
+.hide > h1, .next > h1, .previous > h1 {
+  visibility: hidden;
 }
 
 h1 {
+  width: auto;
   background-color: rgba(0, 0, 0, .3);
   color: rgb(240, 240, 240);
 }
 
+.sliders div.next {
+  order: 1;
+  width: 0;
+  transition: width .4s;
+}
+
+.sliders div.previous {
+  order: -1;
+  width: 0;
+  transition: width .4s;
+}
+
 .sliders__no1 {
   background: url("./imgs/High\ Sierra.jpg") center center no-repeat fixed;
-  background-size: 100vw 100vh;
+  background-size: 100% 100%;
 }
 
 .sliders__no2 {
   background: url("./imgs/Mojave\ Day.jpg") center center no-repeat fixed;
-  background-size: 100vw 100vh;
+  background-size: 100% 100%;
 }
 
 .sliders__no3 {
   background: url("./imgs/Mojave\ Night.jpg") center center no-repeat fixed;
-  background-size: 100vw 100vh;
+  background-size: 100% 100%;
 }
 
 .sliders__no4 {
   background: url("./imgs/Sierra.jpg") center center no-repeat fixed;
-  background-size: 100vw 100vh;
+  background-size: 100% 100%;
 }
 
 .controls__fwBtn, .controls__bwBtn {
-  position: fixed;
+  position: absolute;
   height: 40px;
   width: 40px;
   border-radius: 50% 50%;
@@ -58,12 +92,12 @@ h1 {
 
 .controls__fwBtn {
   top: 50%;
-  right: 5%;
+  right: 10%;
 }
 
 .controls__bwBtn {
   top: 50%;
-  left: 5%;
+  left: 10%;
 }
 
 .controls > div > div {
@@ -82,9 +116,4 @@ h1 {
 
 .controls__bwBtn--arrow {
   transform: translate(-50%, -50%) rotate(-135deg);
-}
-
-.displayNone {
-  display: none;
-  transition: ease-out .2s;
 }
