--- a/homeworks/week17/hw1/views/templates/titleAndNavbar.ejs
+++ b/homeworks/week17/hw1/views/templates/titleAndNavbar.ejs
@@ -17,7 +17,7 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link <% if(path === articlesPath){ %>active<% } %>" href="/articles">Articles</a>
+        <a class="nav-link <% if(path === articlesPath || path.includes('page') || path.includes('id')){ %>active<% } %>" href="/articles">Articles</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle <% if(path.includes(categoryPath)){ %>active<% } %>" href="#" id="navbarCategory" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
